# vintasend-django

./: README.md  manage.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
settings/: test.py
vintasend_django/: apps.py  constants.py  models.py  test_helpers.py
vintasend_django/migrations/: 0001_initial.py
vintasend_django/services/notification_adapters/: django_email.py
vintasend_django/services/notification_backends/: django_db_notification_backend.py
vintasend_django/services/notification_template_renderers/: django_templated_email_renderer.py
vintasend_django/services/tests/: test_adapters.py  test_django_db_notification_backend.py  test_template_renderers.py
vintasend_django/templates/vintasend_django/emails/test/: test_templated_email_body.html
